--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .link-cabecalho {
+        @apply block p-5 xl:my-5 my-4 sm:my-2 md:p-4 hover:bg-amber-400 transition-all duration-500 ease-out rounded font-bold;
+    }
+}
